jvimalprasathdev/src/objects/Apex_Job_Master__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Error_Message__c  =  &apos;&apos; , &apos;Success&apos;, &apos;Failed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Records__c</fullName>
        <label>Success Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apex Job Master</label>
    <listViews>
        <fullName>Todays_Run</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Success_Records__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Run</label>
    </listViews>
    <listViews>
        <fullName>Yesterdays_Run</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Success_Records__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterdays Run</label>
    </listViews>
    <nameField>
        <label>Apex Job Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Job Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>